# QUVI

./: .gitignore  .gitmodules  LICENSE  PROJECT_REVIEW.md  README.md  build.sh  demo.sh  index.html  pytest.ini  record_demo.sh  run.sh  session_output.md
.agents/: claude.md
.agents/rules/: quvi-project.md
.agents/workflows/: commit.md
demo_static/: index.html
demo_static/static/js/: demo_driver.js
docker/: Dockerfile  docker-compose.yml  find_or_start_container.sh  ros_entrypoint.sh  run_micro_ros_agent.sh
docs/: PRIORITY_1_FIX_PLAN.md  PRIORITY_2_FIX_PLAN.md  PRIORITY_3_FIX_PLAN.md  act_sequence_fix_plan.md  code_review_fix_plan_2026-07-11.md  demo_dashboard.md  lerobot_act_training_guide.md  ml_anomaly_inspection_plan.md  ros_architecture_review.md  sequence_impl_plan.md  shadow_readout_log.md  teleop_issue_resolution.md
firmware/quvi_esp32_firmware/: Config.h  README.md  StepperMotor.cpp  StepperMotor.h  platformio.ini  quvi_esp32_firmware.ino
firmware/quvi_esp32_firmware/boards/: lolin_s3.json
scripts/: 99-esp32.rules  99-uvc-cameras.rules  act_loop.sh  act_record.sh  act_train.sh  build_anomaly_dataset.py  check_cam.py  diagnose_wrist.py  grab_frame.py  reset_esp32.py  run_microros_agent.sh  scan_dxl.py  serial_in_container_bridge.py  shadow_report.py  teach_pendant.py  test_sequence.py  train_anomaly_bank.py  train_yolo.py
src/: .pylintrc
src/quvi_bringup/: CMakeLists.txt  package.xml
src/quvi_bringup/launch/: demo.launch.py  full_system.launch.py  vision_pipeline.launch.py
src/quvi_hmi/: package.xml  setup.cfg  setup.py
src/quvi_hmi/config/: hmi_params.yaml
src/quvi_hmi/quvi_hmi/: demo_controller.py  hmi_node.py
src/quvi_hmi/quvi_hmi/static/css/: dashboard.css
src/quvi_hmi/quvi_hmi/static/js/: dashboard.js
src/quvi_hmi/quvi_hmi/templates/: dashboard.html
src/quvi_inspect/: package.xml  setup.cfg  setup.py
src/quvi_inspect/config/: inspect_params.yaml
src/quvi_inspect/quvi_inspect/: anomaly_detector.py  inspect_node.py  ml_preprocess.py  stl_renderer.py
src/quvi_msgs/: CMakeLists.txt  package.xml
src/quvi_msgs/msg/: DetectedObject.msg  GraspGoal.msg  InspectionResult.msg  MotorStatus.msg  ObjectArray.msg  SystemStatus.msg
src/quvi_robot_control/: package.xml  setup.cfg  setup.py
src/quvi_robot_control/quvi_robot_control/: main_orchestrator_node.py  robot_control_node.py  topics.py  utils.py
src/quvi_yolo/: package.xml  setup.cfg  setup.py
src/quvi_yolo/config/: yolo_params.yaml
src/quvi_yolo/quvi_yolo/: yolo_node.py
static/js/: demo_driver.js
tests/: test_alignment.py  test_code_review_improvements.py  test_config_integrity.py  test_orchestrator_logic.py  test_reliability_improvements.py  test_robot_state_preemption.py  test_safety_improvements.py  test_unit_conversion.py
