<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quvi_bringup</name>
  <version>0.1.0</version>
  <description>QUVI 시스템 Launch 파일 및 설정</description>
  <maintainer email="rkdsungjun3344@gmail.com">QUVI Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>quvi_msgs</exec_depend>
  <exec_depend>quvi_yolo</exec_depend>
  <exec_depend>quvi_inspect</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
