<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quvi_inspect</name>
  <version>0.1.0</version>
  <description>QUVI 양불 판정 노드 - CAD 비교 + 표면 특징 분석 기반 듀얼 검사</description>
  <maintainer email="rkdsungjun3344@gmail.com">QUVI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>quvi_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
