<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quvi_robot_control</name>
  <version>0.1.0</version>
  <description>QUVI 로봇팔 + 레일 + 턴테이블 제어 노드 (ACT 모방학습 파지 포함)</description>

  <maintainer email="team@quvi.local">QUVI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>quvi_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_pep8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
