<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quvi_yolo</name>
  <version>0.1.0</version>
  <description>QUVI YOLO 객체 탐지 노드 - 3D 프린터 출력물 다중 감지</description>
  <maintainer email="rkdsungjun3344@gmail.com">QUVI Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>quvi_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
